fixes based on new designs

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -1,4 +1,6 @@
 {
   "flutterWordle":"Flutter Wordle",
-  "poweredBy":"Powered by"
+  "sponsoredBy":"SPONSORED BY",
+  "flutter":"Flutter",
+  "wordle":"Wordle"
 }
