--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -1,6 +1,6 @@
 {
   "flutterWordle":"Flutter Wordle",
-  "sponsoredBy":"SPONSORED BY",
+  "poweredBy":"Powered by",
   "flutter":"Flutter",
   "wordle":"Wordle"
 }
